feat: add EU dataset types (#202)
* feat: add EU dataset types

* Update src/main/java/no/fdk/referencedata/graphql/query/DatasetTypeQuery.java
