# src/main/java/no/fdk/referencedata/eu/datasettype/DatasetTypeRepository.java
@@ -1,0 +1,9 @@
+package no.fdk.referencedata.eu.datasettype;
+
+import org.springframework.data.repository.CrudRepository;
+
+import java.util.Optional;
+
+public interface DatasetTypeRepository extends CrudRepository<DatasetType, String> {
+    Optional<DatasetType> findByCode(String code);
+}
