# src/main/java/no/fdk/referencedata/eu/datasettype/DatasetTypeService.java
@@ -1,0 +1,93 @@
+package no.fdk.referencedata.eu.datasettype;
+
+import lombok.extern.slf4j.Slf4j;
+import no.fdk.referencedata.rdf.RDFSource;
+import no.fdk.referencedata.rdf.RDFSourceRepository;
+import no.fdk.referencedata.rdf.RDFUtils;
+import no.fdk.referencedata.settings.HarvestSettings;
+import no.fdk.referencedata.settings.HarvestSettingsRepository;
+import no.fdk.referencedata.settings.Settings;
+import no.fdk.referencedata.util.Version;
+import org.apache.jena.rdf.model.ModelFactory;
+import org.apache.jena.riot.Lang;
+import org.apache.jena.riot.RDFFormat;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.time.LocalDateTime;
+import java.util.concurrent.atomic.AtomicInteger;
+
+@Service
+@Slf4j
+public class DatasetTypeService {
+    private final String dbSourceID = "dataset-types-source";
+
+    private final DatasetTypeHarvester datasetTypeHarvester;
+
+    private final DatasetTypeRepository datasetTypeRepository;
+
+    private final HarvestSettingsRepository harvestSettingsRepository;
+    private final RDFSourceRepository rdfSourceRepository;
+
+    @Autowired
+    public DatasetTypeService(DatasetTypeHarvester datasetTypeHarvester,
+                              DatasetTypeRepository datasetTypeRepository,
+                              RDFSourceRepository rdfSourceRepository,
+                              HarvestSettingsRepository harvestSettingsRepository) {
+        this.datasetTypeHarvester = datasetTypeHarvester;
+        this.datasetTypeRepository = datasetTypeRepository;
+        this.rdfSourceRepository = rdfSourceRepository;
+        this.harvestSettingsRepository = harvestSettingsRepository;
+    }
+
+    public boolean firstTime() {
+        return datasetTypeRepository.count() == 0;
+    }
+
+    public String getRdf(RDFFormat rdfFormat) {
+        String source = rdfSourceRepository.findById(dbSourceID).orElse(new RDFSource()).getTurtle();
+        if (rdfFormat == RDFFormat.TURTLE) {
+            return source;
+        } else {
+            return RDFUtils.modelToResponse(ModelFactory.createDefaultModel().read(source, Lang.TURTLE.getName()), rdfFormat);
+        }
+    }
+
+    @Transactional
+    public void harvestAndSave(boolean force) {
+        try {
+            final Version latestVersion = new Version(datasetTypeHarvester.getVersion().replace("-", ""));
+
+            final HarvestSettings settings = harvestSettingsRepository.findById(Settings.DATASET_TYPE.name())
+                    .orElse(HarvestSettings.builder()
+                            .id(Settings.DATASET_TYPE.name())
+                            .latestVersion("0")
+                            .build());
+
+            final Version currentVersion = new Version(settings.getLatestVersion().replace("-", ""));
+
+            if(force || latestVersion.compareTo(currentVersion) > 0) {
+                datasetTypeRepository.deleteAll();
+
+                final AtomicInteger counter = new AtomicInteger(0);
+                final Iterable<DatasetType> iterable = datasetTypeHarvester.harvest().toIterable();
+                iterable.forEach(item -> counter.getAndIncrement());
+                log.info("Harvest and saving {} dataset-types", counter.get());
+                datasetTypeRepository.saveAll(iterable);
+
+                RDFSource rdfSource = new RDFSource();
+                rdfSource.setId(dbSourceID);
+                rdfSource.setTurtle(RDFUtils.modelToResponse(datasetTypeHarvester.getModel(), RDFFormat.TURTLE));
+                rdfSourceRepository.save(rdfSource);
+
+                settings.setLatestHarvestDate(LocalDateTime.now());
+                settings.setLatestVersion(datasetTypeHarvester.getVersion());
+                harvestSettingsRepository.save(settings);
+            }
+
+        } catch(Exception e) {
+            log.error("Unable to harvest dataset-types", e);
+        }
+    }
+}
