# src/main/java/no/fdk/referencedata/eu/vocabulary/EUDatasetType.java
@@ -1,0 +1,20 @@
+package no.fdk.referencedata.eu.vocabulary;
+
+import org.apache.jena.rdf.model.Model;
+import org.apache.jena.rdf.model.ModelFactory;
+import org.apache.jena.rdf.model.Resource;
+
+public class EUDatasetType {
+    private static final Model m = ModelFactory.createDefaultModel();
+    public static final Resource NAMESPACE;
+    public static final Resource SCHEME;
+
+    public static String getURI() {
+        return "http://publications.europa.eu/resource/authority/dataset-type";
+    }
+
+    static {
+        NAMESPACE = m.createResource(getURI() + "/");
+        SCHEME = m.createResource(getURI());
+    }
+}
